prevent overlap of menus, centralize menu style definition
fix dim computation

--- a/src/SceneExplorer.module.css
+++ b/src/SceneExplorer.module.css
@@ -49,3 +49,21 @@
   border-radius: 10px;
   user-select: none;
 }
+
+.menuContainer {
+  position: absolute;
+  left: 25px;
+  top: 25px;
+}
+
+.menu {
+  float: left;
+  clear: left;
+  background-color: white;
+  border-radius: 5px;
+  list-style: none;
+  padding: 5px 10px;
+  margin: 0;
+  display: block;
+  border: solid 1px black;
+}
